Make sure active bullet class is visible

--- a/src/jquery-anyslider.css
+++ b/src/jquery-anyslider.css
@@ -70,7 +70,7 @@
     width: 16px;
 }
 
-.as-active,
+.as-nav .as-active,
 .as-nav a:hover {
     background-position: 0 -16px;
 }
